fixed respsonive error and spacing error

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Hind:wght@300;400;500;600;700&family=Kite+One&family=Padauk:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Hind:wght@300;400;500;600;700&family=Kite+One&family=Padauk:wght@400;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -23,7 +23,16 @@
   }
 }
 
-.active{
-  @apply  font-bold text-primary-500;
+.active {
+  @apply font-bold text-primary-500;
 }
 
+.swiper {
+  overflow: hidden;
+}
+.swiper-wrapper {
+  align-items: stretch;
+}
+.swiper-slide {
+  height: auto;
+}
